--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,10 @@
   <title>SecurePen - Enterprise Vulnerability Testing Platform</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico" type="image/svg+xml">
+  <link rel="stylesheet" href="modal.css">
+  <link rel="stylesheet" href="notification.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="app-container">
@@ -37,14 +39,190 @@
       </div>
     </header>
 
-    <!-- Rest of the HTML content remains the same -->
-    <!-- ... -->
+    <main class="main-content">
+      <!-- Dashboard Section -->
+      <section id="dashboard" class="module-section active">
+        <div class="container">
+          <div class="section-header text-center">
+            <h1>Welcome to SecurePen</h1>
+            <p class="section-subtitle">Enterprise-grade vulnerability testing platform</p>
+          </div>
+
+          <div class="stats-grid">
+            <div class="stat-card">
+              <div class="stat-header">
+                <h3 class="stat-title">Tests Run</h3>
+                <div class="stat-icon primary">
+                  <i class="fas fa-vial"></i>
+                </div>
+              </div>
+              <div class="stat-value" id="tests-count">0</div>
+            </div>
+            
+            <div class="stat-card">
+              <div class="stat-header">
+                <h3 class="stat-title">Vulnerabilities Found</h3>
+                <div class="stat-icon warning">
+                  <i class="fas fa-bug"></i>
+                </div>
+              </div>
+              <div class="stat-value" id="vulns-count">0</div>
+            </div>
+            
+            <div class="stat-card">
+              <div class="stat-header">
+                <h3 class="stat-title">Success Rate</h3>
+                <div class="stat-icon success">
+                  <i class="fas fa-chart-line"></i>
+                </div>
+              </div>
+              <div class="stat-value" id="success-rate">0%</div>
+            </div>
+          </div>
+
+          <div class="chart-container">
+            <div class="chart-header">
+              <h3 class="chart-title">Vulnerability Distribution</h3>
+            </div>
+            <div class="chart-body">
+              <canvas id="vulnerability-chart"></canvas>
+            </div>
+          </div>
+
+          <div class="activity-feed">
+            <div class="activity-header">
+              <h3 class="activity-title">Recent Activity</h3>
+            </div>
+            <div id="activity-list" class="activity-list">
+              <div class="activity-item">
+                <div class="activity-icon info">
+                  <i class="fas fa-info-circle"></i>
+                </div>
+                <div class="activity-content">
+                  <h4 class="activity-title">Welcome to SecurePen</h4>
+                  <p class="activity-description">Login or register to save your activity</p>
+                  <span class="activity-time">Just now</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="quick-actions">
+            <h3>Quick Actions</h3>
+            <div class="action-buttons">
+              <button id="get-started-btn" class="btn btn-primary">
+                <i class="fas fa-play"></i>
+                Start Scanning
+              </button>
+              <button id="view-reports-btn" class="btn btn-secondary">
+                <i class="fas fa-file-alt"></i>
+                View Reports
+              </button>
+              <button id="settings-btn" class="btn btn-outline">
+                <i class="fas fa-cog"></i>
+                Settings
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Scanner Section -->
+      <section id="scanner" class="module-section">
+        <!-- Scanner content here -->
+      </section>
+
+      <!-- SQL Injection Section -->
+      <section id="sql-injection" class="module-section">
+        <!-- SQL Injection content here -->
+      </section>
+
+      <!-- XSS Section -->
+      <section id="xss" class="module-section">
+        <!-- XSS content here -->
+      </section>
+
+      <!-- Brute Force Section -->
+      <section id="brute-force" class="module-section">
+        <!-- Brute Force content here -->
+      </section>
+
+      <!-- Path Traversal Section -->
+      <section id="path-traversal" class="module-section">
+        <!-- Path Traversal content here -->
+      </section>
+
+      <!-- Command Injection Section -->
+      <section id="command-injection" class="module-section">
+        <!-- Command Injection content here -->
+      </section>
+    </main>
   </div>
 
-  <!-- Modals -->
-  <!-- ... -->
+  <!-- Login Modal -->
+  <div id="loginModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>Login to SecurePen</h2>
+        <span class="close" id="close-login">&times;</span>
+      </div>
+      <div class="modal-body">
+        <form id="login-form">
+          <div class="form-group">
+            <label for="login-username">Username</label>
+            <input type="text" id="login-username" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" class="form-control" required autocomplete="current-password">
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+          </div>
+          <div class="form-footer">
+            <p>Don't have an account? <a href="#" id="show-register">Register</a></p>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
-  <!-- Scripts -->
-  <script src="updated_script.js"></script>
+  <!-- Register Modal -->
+  <div id="registerModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>Create an Account</h2>
+        <span class="close" id="close-register">&times;</span>
+      </div>
+      <div class="modal-body">
+        <form id="register-form">
+          <div class="form-group">
+            <label for="register-username">Username</label>
+            <input type="text" id="register-username" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="register-email">Email</label>
+            <input type="email" id="register-email" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="register-password">Password</label>
+            <input type="password" id="register-password" class="form-control" required autocomplete="new-password">
+          </div>
+          <div class="form-group">
+            <label for="register-confirm">Confirm Password</label>
+            <input type="password" id="register-confirm" class="form-control" required autocomplete="new-password">
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
+          </div>
+          <div class="form-footer">
+            <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
